--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,11 +1,40 @@
 <ion-header>
   <ion-navbar>
     <ion-title>
-      Handpoint test
+      Handpoint SDK Testing page
     </ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
-  <p>{{ message }}</p>
+
+  <div *ngIf="statusMessage">
+    <h2>Status:</h2>
+    <p>{{ statusMessage }}</p>
+  </div>
+
+  <ion-list>
+    <ion-item>
+      <ion-label color="primary">Device MAC Address</ion-label>
+      <ion-input placeholder="MAC Address" [(ngModel)]="macAddress" name="macAddress" type="text"></ion-input>
+    </ion-item>
+    <ion-item>
+      <button large ion-button block (click)="connect()">Connect</button>
+    </ion-item>
+  </ion-list>
+
+  <ion-list>
+    <ion-item>
+      <ion-label color="primary">Amount</ion-label>
+      <ion-input placeholder="Amount" [(ngModel)]="saleParams.amount" name="amount" type="text"></ion-input>
+    </ion-item>
+    <ion-item>
+      <button large ion-button block (click)="sale()">Sale</button>
+    </ion-item>
+  </ion-list>
+
+  <h2>Event log</h2>
+  <ul>
+    <li *ngFor="let event of events">{{ event }}</li>
+  </ul>
 </ion-content>
