Simple 3 tab layout: Pay, Payment and Config pages

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -13,6 +13,8 @@
     <p>{{ statusMessage }}</p>
   </div>
 
+  <button ion-button clear (click)="searchDevices()"><ion-icon name="ios-search-outline"></ion-icon> Search Devices</button>
+
   <ion-list>
     <ion-item>
       <ion-label color="primary">Device MAC Address</ion-label>
