Fixes #1 fixes #2 fixes #11

--- a/src/pages/configuration/configuration.html
+++ b/src/pages/configuration/configuration.html
@@ -6,6 +6,19 @@
 
 <ion-content padding>
 
-  <button ion-button clear (click)="searchDevices()"><ion-icon name="ios-search-outline"></ion-icon> Search Devices</button>
+  <ion-list>
+    <ion-item>
+      <button ion-button clear (click)="searchDevices()"><ion-icon name="ios-search-outline"></ion-icon> Search Devices</button>
+    </ion-item>
+    <ion-item>
+      <ion-icon name="ios-cash-outline" item-left></ion-icon>
+      <ion-label>
+        <h2>Currency</h2>
+      </ion-label>
+      <ion-select item-right [(ngModel)]="currencyCode" name="currency" (ionChange)="updateCurrency()">
+        <ion-option *ngFor="let currency of currencies" [value]="currency.code">{{ currency.name }} <span *ngIf="currency.symbol">({{ currency.symbol.grapheme }})</span></ion-option>
+      </ion-select>
+    </ion-item>
+  </ion-list>
 
 </ion-content>
