--- a/src/pages/configuration/configuration.html
+++ b/src/pages/configuration/configuration.html
@@ -11,6 +11,9 @@
       <button ion-button clear (click)="searchDevices()"><ion-icon name="ios-search-outline"></ion-icon> Search Devices</button>
     </ion-item>
     <ion-item>
+      <button ion-button clear (click)="log()"><ion-icon name="ios-list-box-outline"></ion-icon> Logs</button>
+    </ion-item>
+    <ion-item>
       <ion-icon name="ios-cash-outline" item-left></ion-icon>
       <ion-label>
         <h2>Currency</h2>
