--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
+
 <head>
   <meta charset="UTF-8">
   <title>Ionic App</title>
@@ -10,7 +11,14 @@
   <link rel="icon" type="image/x-icon" href="assets/icon/favicon.ico">
   <link rel="manifest" href="manifest.json">
   <meta name="theme-color" content="#4e8ef7">
- 
+
+  <script>
+    // Custom url scheme handling (used to set shared secret)
+    function handleOpenURL(url) {
+      window.lastHandleOpenURL = url;
+    }
+
+  </script>
   <!-- cordova.js required for cordova apps -->
   <script src="cordova.js"></script>
 
@@ -26,6 +34,7 @@
   <link href="build/main.css" rel="stylesheet">
 
 </head>
+
 <body>
 
   <!-- Ionic's root component and where the app will load -->
@@ -38,4 +47,5 @@
   <script src="build/main.js"></script>
 
 </body>
+
 </html>
