--- a/src/pages/configuration/configuration.html
+++ b/src/pages/configuration/configuration.html
@@ -9,7 +9,7 @@
   <ion-list>
     <ion-item (click)="searchDevices()">
       <ion-icon name="ios-search-outline" item-start></ion-icon>
-      Search Devices
+      Connect to device
     </ion-item>
     <ion-item (click)="log()">
       <ion-icon name="ios-list-box-outline" item-start></ion-icon>
