--- a/src/pages/search-devices/search-devices.html
+++ b/src/pages/search-devices/search-devices.html
@@ -33,6 +33,6 @@
     </ion-row>
   </ion-grid>
 
-  <button *ngIf="finishScan && devices && devices.length > 0" (click)="scan()" ion-button color="light" clear><ion-icon margin-right name="ios-bluetooth-outline" item-start></ion-icon> Scan again</button>
+  <button *ngIf="finishScan && devices && devices.length > 0" (click)="scan()" ion-button color="light" clear><ion-icon margin-right name="ios-refresh-outline" item-start></ion-icon> Scan again</button>
 
 </ion-content>
