--- a/src/pages/search-devices/search-devices.html
+++ b/src/pages/search-devices/search-devices.html
@@ -1,12 +1,12 @@
 <ion-header>
   <ion-navbar>
-    <ion-title>Scan devices</ion-title>
+    <ion-title>Connect to device</ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content class="page-bg" padding>
 
-  <h1 *ngIf="devices && devices.length > 0">Connect to device</h1>
+  <h1 *ngIf="devices && devices.length > 0">Devices</h1>
 
   <ion-list>
     <ion-card ion-item *ngFor="let device of devices" (click)="connect(device)">
@@ -33,6 +33,8 @@
     </ion-row>
   </ion-grid>
 
-  <button *ngIf="finishScan && devices && devices.length > 0" (click)="scan()" ion-button color="light" clear><ion-icon margin-right name="ios-bluetooth-outline" item-start></ion-icon> Scan again</button>
+  <button block *ngIf="finishScan && devices && devices.length > 0" (click)="scan()" ion-button color="light" clear>
+    <ion-icon margin-right name="ios-bluetooth-outline" item-start></ion-icon> Scan again
+  </button>
 
 </ion-content>
